Resolved the layout issues for IE11

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ h1{
 
 .nav-dropdown-desktop{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     width: 100%;
     height: 100%;
@@ -130,12 +130,12 @@ h1{
 }
 
 .nav-logo-container{
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     width: 4em;
     height: 4em;
-    position: absolute;
+    /* position: absolute; */
     margin: 0em auto 0em auto;
 }
 
@@ -495,7 +495,7 @@ h1{
 
 .skill-block{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     transition: transform 0.1s ease-in-out;
 }
@@ -528,6 +528,7 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     margin-top: 2em;
 }
 
@@ -538,6 +539,10 @@ h1{
     align-items: center;
     text-align: left;
     width: 55%;
+}
+
+.work-description{
+    width: 100%;
 }
 
 .work-history-block p, h3{
@@ -654,6 +659,10 @@ h1{
     /* text-align: center; */
     width: 100%;
     height: 9.125em;
+}
+
+.plan-content{
+    width: 100%;
 }
 
 .plan-heading{
@@ -787,6 +796,8 @@ h1{
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -816,8 +827,12 @@ h1{
     /* color: #fff; */
     width: 33%;
     position: absolute;
+    left: 0em;
+    right: 0em;
     bottom: 3em;
     margin-top: 7em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .social-media-icons{
